# firefly-cli

./: CLAUDE.md  README.md  SKILL.md  TODO.md  pyproject.toml
completions/: firefly.bash
docs/superpowers/plans/: 2026-06-30-firefly-cli.md
docs/superpowers/specs/: 2026-06-30-firefly-cli-design.md  2026-07-01-smaller-issues-design.md
firefly_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  context.py  errors.py  output.py  registry.py  resolver.py
firefly_cli/commands/: __init__.py  account.py  auth.py  category.py  tag.py  transaction.py
scripts/: gen_completion.py
tests/integration/: test_live.py
tests/unit/: test_cli.py  test_client.py  test_commands_account.py  test_commands_transaction.py  test_config.py  test_errors.py  test_output.py  test_registry.py  test_resolver.py
